// Copyright 2020 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.event.payloads;

option java_multiple_files = true;

import "970-grpc/src/main/proto/io/harness/event/payloads/common_messages.proto";

message Ec2InstanceInfo {
  string instance_id = 1;
  string instance_type = 2;
  string capacity_reservation_id = 3;
  string spot_instance_request_id = 4;
  string instance_lifecycle = 5;
  InstanceState instance_state = 6;
  string cluster_arn = 7;
  string region = 8;
  string cluster_id = 9;
  string setting_id = 10;
}

message InstanceState {
  int32 code = 1;
  string name = 2;
}

message Ec2Lifecycle {
  Lifecycle lifecycle = 1;
}
